--- a/index.html
+++ b/index.html
@@ -51,229 +51,203 @@
 			</span>
 		</section>
 		<!-- Second Section-->
+
 		<section class="portfolio" id="portfolio">
-			<h2>The Projects</h2>
-
-			<div class="row">
-				<div class="col-1-of-3">
-					<div class="portfolio__items">
-						<a
-							href="https://dileit.github.io/stranded-in-infinity/"
-							class="portfolio__image"
-							target="_blank"
-							><img
-								src="img/quote-thumbnail.png"
-								alt="character quote guessing game"
-						/></a>
-						<h3>Quote Game</h3>
-						<p class="portfolio__items--desc">
-							Page layout for a guessing quote game, featuring characters of a
-							tabletop game. Features are done with HTML, CSS3, Sass, Flexbox
-							and a JavaScript popup. Game Functionality to follow. Custom
-							HTML/CSS.
-						</p>
-						<ul class="actions">
-							<li>
-								<a
-									href="https://github.com/dileit/stranded-in-infinity"
-									class="btn btn-ghost"
-									target="_blank"
-									>Repo</a
-								>
-							</li>
-							<li>
-								<a
-									href="https://dileit.github.io/stranded-in-infinity/"
-									class="btn btn-ghost"
-									target="_blank"
-									>Link</a
-								>
-							</li>
-						</ul>
-					</div>
+			<header><h2>The Projects</h2></header>
+			<!-- Flex Container-->
+			<div class="projects">
+				<!-- Quote Game-->
+				<div class="box">
+					<a
+						href="https://dileit.github.io/stranded-in-infinity/"
+						class="box__image"
+						target="_blank"
+						><img
+							src="img/quote-thumbnail.png"
+							alt="character quote guessing game"
+					/></a>
+					<h3>Quote Game</h3>
+					<p class="box__desc">
+						Page layout for a guessing quote game, featuring characters of a
+						tabletop game. Features are done with HTML, CSS3, Sass, Flexbox and
+						a JavaScript popup. Game Functionality to follow. Custom HTML/CSS.
+					</p>
+					<ul class="box__actions">
+						<li>
+							<a
+								href="https://github.com/dileit/stranded-in-infinity"
+								class="btn btn-ghost"
+								target="_blank"
+								>Repo</a
+							>
+						</li>
+						<li>
+							<a
+								href="https://dileit.github.io/stranded-in-infinity/"
+								class="btn btn-ghost"
+								target="_blank"
+								>Link</a
+							>
+						</li>
+					</ul>
+				</div>
+				<!-- Camping Landing Page-->
+				<div class="box">
+					<a
+						href="https://dileit.github.io/campout/"
+						class="box__image"
+						target="_blank"
+						><img
+							src="img/camping-thumbnail.png"
+							alt="Campout landing page thumbnail"
+					/></a>
+					<h3>Camping Trips</h3>
+					<p class="box__desc">
+						Product landing page for a fictional company, Campout. Features
+						include HTML5, CSS3, Sass, a custom grid and mixins. I based this
+						off of the final project for the Udemy course: Advanced CSS and Sass
+						by Jonas Schmedtmann.
+					</p>
+					<ul class="box__actions">
+						<li>
+							<a
+								href="https://github.com/dileit/campout"
+								class="btn btn-ghost"
+								target="blank"
+								>Repo</a
+							>
+						</li>
+						<li>
+							<a
+								href="https://dileit.github.io/campout/"
+								class="btn btn-ghost"
+								target="blank"
+								>Link</a
+							>
+						</li>
+					</ul>
 				</div>
 
-				<div class="col-1-of-3">
-					<div class="portfolio__items">
-						<a
-							href="https://dileit.github.io/campout/"
-							class="portfolio__image"
-							target="_blank"
-							><img
-								src="img/camping-thumbnail.png"
-								alt="Campout landing page thumbnail"
-						/></a>
-						<h3>Camping Trips</h3>
-						<p class="portfolio__items--desc">
-							Product landing page for a fictional company, Campout. Features
-							include HTML5, CSS3, Sass, a custom grid and mixins. I based this
-							off of the final project for the Udemy course: Advanced CSS and
-							Sass by Jonas Schmedtmann.
-						</p>
-						<ul class="actions">
-							<li>
-								<a
-									href="https://github.com/dileit/campout"
-									class="btn btn-ghost"
-									target="blank"
-									>Repo</a
-								>
-							</li>
-							<li>
-								<a
-									href="https://dileit.github.io/campout/"
-									class="btn btn-ghost"
-									target="blank"
-									>Link</a
-								>
-							</li>
-						</ul>
-					</div>
+				<!-- Omnifood Landing Page-->
+				<div class="box">
+					<a
+						href="https://dileit.github.io/omnifood-project/"
+						class="box__image"
+						target="_blank"
+						><img
+							src="img/omnifood-thumbnail-1.png"
+							alt="Omnifood landing page thumbnail"
+					/></a>
+					<h3>Omnifood</h3>
+					<p class="box__desc">
+						Product landing page for a fictional company, Omnifood. Features are
+						done with HTML, CSS3: animations and grid, and jQuery. Final product
+						of the Udemy course: Build Responsive Real World Websites by Jonas
+						Schmedtmann.
+					</p>
+					<ul class="box__actions">
+						<li>
+							<a
+								href="https://github.com/dileit/omnifood-project"
+								class="btn btn-ghost"
+								target="_blank"
+								>Repo</a
+							>
+						</li>
+						<li>
+							<a
+								href="https://dileit.github.io/omnifood-project/"
+								class="btn btn-ghost"
+								target="_blank"
+								>Link</a
+							>
+						</li>
+					</ul>
 				</div>
-
-				<div class="col-1-of-3">
-					<div class="portfolio__items">
-						<a
-							href="https://dileit.github.io/omnifood-project/"
-							class="portfolio__image"
-							target="_blank"
-							><img
-								src="img/omnifood-thumbnail-1.png"
-								alt="Omnifood landing page thumbnail"
-						/></a>
-						<h3>Omnifood</h3>
-						<p class="portfolio__items--desc">
-							Product landing page for a fictional company, Omnifood. Features
-							are done with HTML, CSS3: animations and grid, and jQuery. Final
-							product of the Udemy course: Build Responsive Real World Websites
-							by Jonas Schmedtmann.
-						</p>
-						<ul class="actions">
-							<li>
-								<a
-									href="https://github.com/dileit/omnifood-project"
-									class="btn btn-ghost"
-									target="_blank"
-									>Repo</a
-								>
-							</li>
-							<li>
-								<a
-									href="https://dileit.github.io/omnifood-project/"
-									class="btn btn-ghost"
-									target="_blank"
-									>Link</a
-								>
-							</li>
-						</ul>
-					</div>
-				</div>
+				<!-- 4th element-->
 			</div>
 		</section>
 
 		<!-- Third Section -->
 		<section class="portfolio" id="javascript">
-			<h2>JavaScript Focus</h2>
+			<header><h2>JavaScript Focus</h2></header>
 
-			<div class="row">
-				<div class="col-1-of-3">
-					<div class="portfolio__items">
-						<a
-							href="https://dileit.github.io/pig-game/"
-							class="portfolio__image"
-							target="blank"
-							><img src="img/dice-thumbnail.png" alt="Dice game thumbnail"
-						/></a>
-						<h3>Dice Game</h3>
-						<p class="portfolio__items--desc">
-							Pig dice game. Play against yourself or a friend and see who can
-							get to 100 points first! Features include HTML5, CSS3, and
-							JavaScript. Coursework part of: The Complete JavaScript Course by
-							Jonas Schmedtmann.
-						</p>
-						<ul class="actions">
-							<li>
-								<a
-									href="https://github.com/dileit/pig-game"
-									class="btn btn-ghost"
-									target="blank"
-									>Repo</a
-								>
-							</li>
-							<li>
-								<a
-									href="https://dileit.github.io/pig-game/"
-									class="btn btn-ghost"
-									target="blank"
-									>Link</a
-								>
-							</li>
-						</ul>
-					</div>
+			<!-- Flex Container-->
+			<div class="projects">
+				<!-- Pig Game -->
+				<div class="box">
+					<a
+						href="https://dileit.github.io/pig-game/"
+						class="box__image"
+						target="blank"
+						><img src="img/dice-thumbnail.png" alt="Dice game thumbnail"
+					/></a>
+					<h3>Dice Game</h3>
+					<p class="box__desc">
+						Pig dice game. Play against yourself or a friend and see who can get
+						to 100 points first! Features include HTML5, CSS3, and JavaScript.
+						Coursework part of: The Complete JavaScript Course by Jonas
+						Schmedtmann.
+					</p>
+					<ul class="box__actions">
+						<li>
+							<a
+								href="https://github.com/dileit/pig-game"
+								class="btn btn-ghost"
+								target="blank"
+								>Repo</a
+							>
+						</li>
+						<li>
+							<a
+								href="https://dileit.github.io/pig-game/"
+								class="btn btn-ghost"
+								target="blank"
+								>Link</a
+							>
+						</li>
+					</ul>
 				</div>
 
-				<div class="col-1-of-3">
-					<div class="portfolio__items">
-						<a
-							href="https://dileit.github.io/guess-my-number/"
-							class="portfolio__image"
-							target="_blank"
-							><img
-								src="img/guess-thumbnail.png"
-								alt="Number guessing game thumbnail"
-						/></a>
-						<h3>Number Game</h3>
-						<p class="portfolio__items--desc">
-							Guess the random number game. Enter a number between 1 and 20 to
-							see if you're right! Features include HTML5, CSS3, and JavaScript.
-							Coursework part of: The Complete JavaScript Course by Jonas
-							Schmedtmann.
-						</p>
-						<ul class="actions">
-							<li>
-								<a
-									href="https://github.com/dileit/guess-my-number"
-									class="btn btn-ghost"
-									target="_blank"
-									>Repo</a
-								>
-							</li>
-							<li>
-								<a
-									href="https://dileit.github.io/guess-my-number/"
-									class="btn btn-ghost"
-									target="_blank"
-									>Link</a
-								>
-							</li>
-						</ul>
-					</div>
+				<!-- Guess the number Game -->
+				<div class="box">
+					<a
+						href="https://dileit.github.io/guess-my-number/"
+						class="box__image"
+						target="_blank"
+						><img
+							src="img/guess-thumbnail.png"
+							alt="Number guessing game thumbnail"
+					/></a>
+					<h3>Number Game</h3>
+					<p class="box__desc">
+						Guess the random number game. Enter a number between 1 and 20 to see
+						if you're right! Features include HTML5, CSS3, and JavaScript.
+						Coursework part of: The Complete JavaScript Course by Jonas
+						Schmedtmann.
+					</p>
+					<ul class="box__actions">
+						<li>
+							<a
+								href="https://github.com/dileit/guess-my-number"
+								class="btn btn-ghost"
+								target="_blank"
+								>Repo</a
+							>
+						</li>
+						<li>
+							<a
+								href="https://dileit.github.io/guess-my-number/"
+								class="btn btn-ghost"
+								target="_blank"
+								>Link</a
+							>
+						</li>
+					</ul>
 				</div>
 
-				<!-- <div class="col-1-of-3">
-					<div class="portfolio__items">
-						<a href="#" class="portfolio__image"
-							><img
-								src="img/quote-thumbnail.png"
-								alt="character quote guessing game"
-						/></a>
-						<h3>Quote Game</h3>
-						<p class="portfolio__items--desc">
-							Product landing page for a fictional company, Omnifood. Features
-							are done with HTML, CSS3: animations and grid, and jQuery. Final
-							product of the Udemy course: Build Responsive Real World Websites
-							by Jonas Schmedtmann.
-						</p>
-						<ul class="actions">
-							<li>
-								<a href="#" class="btn btn-ghost" target="_blank">Repo</a>
-							</li>
-							<li>
-								<a href="#" class="btn btn-ghost" target="_blank">Link</a>
-							</li>
-						</ul>
-					</div>
-				</div> -->
+				<!-- 3rd Item-->
+				<div class="box"></div>
 			</div>
 		</section>
 	</body>
@@ -284,15 +258,3 @@
 		</div>
 	</footer>
 </html>
-
-<!-- test text
-Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.
-Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat
-tempus aliquam. -->
-
-<!-- *Aenean ornare velit
-lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante
-interdum congue. Integer mollis, nisl amet convallis, porttitor magna
-ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia.
-Nam maximus erat id euismod egestas. Pellentesque sapien ac quam.
-Lorem ipsum dolor sit nullam.* -->
