Added new projects

--- a/index.html
+++ b/index.html
@@ -30,14 +30,12 @@
 			<div class="intro__text-box">
 				<header>
 					<h1>Hi, I'm Diana!</h1>
-					<p class="intro__tag-line">
-						A front-end web developer in Massachusetts.
-					</p>
+					<p class="intro__tag-line">Full Stack Software Developer</p>
 				</header>
 				<p class="intro__summary">
-					Responsive web design is my jam. The skills under my belt include:
-					HTML5, CSS3, SASS, jQuery and JavaScript. I am currently learning
-					Node.js, and React.
+					Full Stack Development is my jam. The skills under my belt include:
+					JavaScript, React, Node, Express, PostgreSQL, SASS, CSS, HTML. I am
+					currently learning Python.
 				</p>
 				<a class="btn btn-ghost intro__btn" href="#portfolio">My work</a>
 				<a class="btn btn-ghost intro__btn" href="#javascript">JavaScript</a>
@@ -50,12 +48,49 @@
 				/>
 			</span>
 		</section>
+
 		<!-- Second Section-->
 
 		<section class="portfolio" id="portfolio">
 			<header><h2>The Projects</h2></header>
 			<!-- Flex Container-->
 			<div class="projects">
+				<!-- Reservation System-->
+				<div class="box">
+					<a
+						href="https://reservation-start.vercel.app/dashboard"
+						class="box__image"
+						target="_blank"
+						><img
+							src="img/reservation-thumb.png"
+							alt="reservation system for restaurant"
+					/></a>
+					<h3>Reservation System</h3>
+					<p class="box__desc">
+						Full Stack Reservation system for a restaurant, featuring additions,
+						cancellations and lookup. Features are done with React, JavaScript,
+						bootstrap, custom API, knex and a database in PostgreSQL.
+					</p>
+					<ul class="box__actions">
+						<li>
+							<a
+								href="https://github.com/dileit/reservation-start"
+								class="btn btn-ghost"
+								target="_blank"
+								>Repo</a
+							>
+						</li>
+						<li>
+							<a
+								href="https://reservation-start.vercel.app/dashboard"
+								class="btn btn-ghost"
+								target="_blank"
+								>Link</a
+							>
+						</li>
+					</ul>
+				</div>
+
 				<!-- Quote Game-->
 				<div class="box">
 					<a
@@ -70,7 +105,8 @@
 					<p class="box__desc">
 						Page layout for a guessing quote game, featuring characters of a
 						tabletop game. Features are done with HTML, CSS3, Sass, Flexbox and
-						a JavaScript popup. Game Functionality to follow. Custom HTML/CSS.
+						a JavaScript popup. Game Functionality being updated. Custom
+						HTML/CSS.
 					</p>
 					<ul class="box__actions">
 						<li>
@@ -127,7 +163,9 @@
 						</li>
 					</ul>
 				</div>
-
+			</div>
+			<!-- Next Row -->
+			<div class="projects">
 				<!-- Omnifood Landing Page-->
 				<div class="box">
 					<a
@@ -164,7 +202,8 @@
 						</li>
 					</ul>
 				</div>
-				<!-- 4th element-->
+				<div class="box"></div>
+				<div class="box"></div>
 			</div>
 		</section>
 
@@ -174,6 +213,40 @@
 
 			<!-- Flex Container-->
 			<div class="projects">
+				<!-- Pomodoro Timer -->
+				<div class="box">
+					<a
+						href="https://pomodoro-timer-iota-three.vercel.app/"
+						class="box__image"
+						target="_blank"
+						><img src="img/pomo-thumbnail.png" alt="Pomodoro timer thumbnail"
+					/></a>
+					<h3>Pomodoro Timer</h3>
+					<p class="box__desc">
+						A focus timer allowing you to set Focus and Break sessions. Allows
+						sessions between 5 minutes to 25 minutes long. A break is 1 minute
+						to 5 minutes long. Features include JavaScript, CSS and HTML.
+					</p>
+					<ul class="box__actions">
+						<li>
+							<a
+								href="https://github.com/dileit/guess-my-number"
+								class="btn btn-ghost"
+								target="_blank"
+								>Repo</a
+							>
+						</li>
+						<li>
+							<a
+								href="https://pomodoro-timer-iota-three.vercel.app/"
+								class="btn btn-ghost"
+								target="_blank"
+								>Link</a
+							>
+						</li>
+					</ul>
+				</div>
+
 				<!-- Pig Game -->
 				<div class="box">
 					<a
@@ -247,13 +320,13 @@
 				</div>
 
 				<!-- 3rd Item-->
-				<div class="box"></div>
+				<!-- <div class="box"></div> -->
 			</div>
 		</section>
 	</body>
 	<footer>
 		<div>
-			<p>Copyright &copy; 2020 by Diana Leitzman. All rights reserved.</p>
+			<p>Copyright &copy; 2021 by Diana Leitzman. All rights reserved.</p>
 			<p>Made with &hearts;</p>
 		</div>
 	</footer>
